Fix Safari bug where top + bottom of some icons cut off on hover

--- a/corehq/apps/hqwebapp/static/dashboard/scss/dashboard-main.scss
+++ b/corehq/apps/hqwebapp/static/dashboard/scss/dashboard-main.scss
@@ -25,6 +25,9 @@ $dashboard-icon-size: 100px;
     text-decoration: none;
     outline: none;
   }
+  i.dashboard-icon::before{
+    padding: 7px 0;
+  }
 }
 
 .card-dashboard {
